--- a/pages/Inga/style.css
+++ b/pages/Inga/style.css
@@ -43,3 +43,20 @@ body {
     margin-top: 20px;
     font-size: x-large;
 }
+
+.headerCompetences{
+    padding-left: 20px;
+    font-size: xx-large;
+    text-decoration: underline;
+}
+.competences{
+    padding: 10px 10px 10px 25px;
+    display: grid;
+    grid-template-columns: 50px 200px 100px;
+    row-gap: 20px;
+    column-gap: 10px;
+    align-items: center;
+}
+.imgCompetence{
+    width: 100%;
+}
