--- a/pages/Cristina/git.css
+++ b/pages/Cristina/git.css
@@ -20,3 +20,11 @@ h1 {
     color: blueviolet;
     font-size: larger;
 }
+
+li {
+    font-size: large;
+    font-weight: bold;
+    color: black;
+    margin-bottom: 1em;
+}
+
