--- a/pages/dalia/dalia.css
+++ b/pages/dalia/dalia.css
@@ -3,17 +3,25 @@ article {
 }
 #intro {
     position: relative;
-    width: 40rem;
-    max-width: 100%;
+    margin: 1% 8%;
+    max-width: 70%;
     background-color: white;
     border-radius: 4px;
     padding: 4.5rem 2.5rem 1.5rem 2.5rem;
 }
 .image.main img{
     justify-content: center;
-    width: 80%;
+    width: 100%;
    
 }
 .image img {
     display: block;
+}
+#work {
+    position: relative;
+    margin: 1% 8%;
+    max-width: 70%;
+    background-color: white;
+    border-radius: 4px;
+    padding: 4.5rem 2.5rem 1.5rem 2.5rem;
 }
