--- a/pages/Nga/style.css
+++ b/pages/Nga/style.css
@@ -13,6 +13,17 @@
     margin-left: 40px;
     margin-right: 40px;
     }
+.competences {
+    margin: 40px;
+    border-top: solid 2px gray;
+}
+h1 {
+    padding-top: 20px;
+    color: green;
+}
+.row {
+    background-color: rgb(238, 231, 231);
+}
 .contact {
     height: 100px;
     border: solid 2px green;
