--- a/pages/dalia/dalia.css
+++ b/pages/dalia/dalia.css
@@ -1,7 +1,7 @@
 article {
     display: block;
 }
-#intro {
+#introdalia {
     position: relative;
     margin: 1% 8%;
     max-width: 70%;
@@ -17,7 +17,7 @@ article {
 .image img {
     display: block;
 }
-#work {
+#workdalia {
     position: relative;
     margin: 1% 8%;
     max-width: 70%;
