--- a/pages/Nga/style.css
+++ b/pages/Nga/style.css
@@ -9,6 +9,7 @@
     color: #3E239D;
 }
 .presentation {
+    border-top: solid 2px gray;
     height: auto;
     margin-left: 40px;
     margin-right: 40px;
@@ -25,6 +26,19 @@ h1 {
     background-color: rgb(238, 231, 231);
 }
 .contact {
-    height: 100px;
-    border: solid 2px green;
+    height: auto;
+    margin: 20px;
+}
+.titre {
+    text-align: center;
+    padding-top: 15px;
+}
+.box p {
+    text-align: center;
+    color: midnightblue;
+    font-size: 18px;
+}
+.box p a {
+    text-decoration: none;
+    color: inherit;
 }
