--- a/pages/dalia/dalia.css
+++ b/pages/dalia/dalia.css
@@ -1,6 +1,16 @@
 article {
     display: block;
 }
+label {
+    color: #ffffff;
+    display: block;
+    font-size: 0.8rem;
+    font-weight: 300;
+    letter-spacing: 0.2rem;
+    line-height: 1.5;
+    margin: 0 0 1rem 0;
+    text-transform: uppercase;
+}
 #introdalia {
     position: relative;
     margin: 1% 8%;
@@ -25,3 +35,94 @@ article {
     border-radius: 4px;
     padding: 4.5rem 2.5rem 1.5rem 2.5rem;
 }
+
+.icons {
+    text-decoration: none;
+    border-bottom: none;
+    position: relative;
+}
+#contactdalia {
+   
+    padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+    position: relative;
+    margin : 1% 8%;
+    max-width: 70%;
+    background-color: rgba(27, 31, 34, 0.85);
+    border-radius: 4px;
+    color: white;
+   
+}
+.actions {
+    list-style: none;
+}
+input[type="text"]{
+    height: 2.75rem;
+    border-radius: 4px;
+    border: solid 1px #ffffff;
+    color: inherit;
+    display: block;
+    outline: 0;
+    padding: 0 1rem;
+    text-decoration: none;
+    width: 100%;
+}
+textarea {
+    padding: 0.75rem 1rem;
+    border-radius: 4px;
+    border: solid 1px #ffffff;
+    color: inherit;
+    display: block;
+    outline: 0;
+    padding: 0 1rem;
+    text-decoration: none;
+    width: 100%;
+}
+.icons {
+    list-style: none;
+    display: flex;
+    margin: 0 0 2rem 0;
+}
+ul.icons li {
+    display: inline-block;
+    padding: 0 0.75em 0 0;
+}
+
+  ul.icons li a {
+    border-radius: 100%;
+    box-shadow: inset 0 0 0 1px #ffffff;
+    display: inline-block;
+    height: 2.25rem;
+    line-height: 2.25rem;
+    text-align: center;
+    width: 2.25rem;
+}
+input[type="submit"].primary {
+    background-color: white;
+    color: black;
+    border-radius: 4px;
+    display: inline-block;
+    padding: 0 1.25rem 0 1.35rem;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+input[type="reset"]{
+    border-color: white;
+    background-color: transparent;
+    border-radius: 4px;
+    color: white;
+    padding: 0 1.25rem 0 1.35rem;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+form .fields .field {
+    flex-grow: 0;
+    flex-shrink: 0;
+    padding: 1.5rem 0 0 1.5rem;
+    width: calc(100% - 1.5rem);
+    margin-bottom: 2%;
+}
+
