--- a/pages/Inga/style.css
+++ b/pages/Inga/style.css
@@ -2,9 +2,20 @@ body {
     padding: 5px;
 }
 
-.presentation {
-    padding: 20px 20px 10px 20px;
+.monNom {
+    padding: 10px;
+    margin-bottom: 5px;   
     border-radius: 40px 40px 0px 0px;
+    border-color: rgb(88, 89, 91);
+    border-width: 2px;
+    border-style: solid;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.presentation {
+    padding: 10px 20px;   
 }
 
 .textXXlarge {
@@ -45,13 +56,13 @@ body {
     font-size: x-large;
 }
 
-.competencesContainer{
-   border-bottom-left-radius: 40px;
-   padding-bottom: 20px;
+.competencesContainer {
+    border-bottom-left-radius: 40px;
+    padding-bottom: 20px;
 }
+
 .headerCompetences {
     padding-left: 20px;
-    
     font-size: xx-large;
     text-decoration: underline;
 }
@@ -63,37 +74,46 @@ body {
     row-gap: 20px;
     column-gap: 10px;
     align-items: center;
-   
 }
-
+.divImgCompetence{
+    background-color: whitesmoke;
+    min-height: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+}
 .imgCompetence {
-    width: 100%;
+    width: 100%;    
 }
 
 .divCenter {
     display: grid;
-    grid-template-columns: 420px auto;        
+    grid-template-columns: 420px auto;
 }
-.contactContainerGlobal{
+
+.contactContainerGlobal {
     border-bottom-right-radius: 40px;
 }
-.contactContainer{
-    border-top-left-radius: 60px ;
+
+.contactContainer {
+    border-top-left-radius: 60px;
     border-bottom-right-radius: 40px;
     height: 100%;
 }
-.headerContact{
+
+.headerContact {
     padding-left: 20px;
     padding-top: 20px;
     font-size: x-large;
     text-decoration: underline;
 }
 
-.contact{    
+.contact {
     padding: 40px 10px 10px 20px;
     font-size: large;
     display: grid;
     grid-template-columns: 25px auto;
     column-gap: 5px;
     row-gap: 20px;
+    align-items: center;
 }
